# Robotics

./: README.md
Autonomous car project/: perception.py
Autonomous car project/LaneFollowingOpenCV/: perception.py  pi car.rar
Autonomous car project/LaneFollowingOpenCV/pi car/: OnlyDrive.py  fps_monitor.py  main_drive_record.py  perception.py  perception_drive_record.py  ui.py
Autonomous car project/v2 adaptive speed control/: actuation.py  main.py  perception.py
Pi Car/: actuation.py  main.py
continuum_ws/src/continuum_bringup/: package.xml  setup.cfg  setup.py
continuum_ws/src/continuum_bringup/launch/: bringup.launch.py  demo.launch.py
continuum_ws/src/continuum_control/: package.xml  setup.cfg  setup.py
continuum_ws/src/continuum_control/continuum_control/: control_node.py
continuum_ws/src/continuum_description/: CMakeLists.txt  package.xml
continuum_ws/src/continuum_kinematics/: package.xml  setup.cfg  setup.py
continuum_ws/src/continuum_kinematics/continuum_kinematics/: kinematics.py
continuum_ws/src/continuum_msgs/: CMakeLists.txt  package.xml
continuum_ws/src/continuum_msgs/msg/: Link.msg  RobotState.msg  Servo.msg
continuum_ws/src/continuum_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
continuum_ws/src/continuum_rviz_plugin/include/continuum_rviz_plugin/: continuum_panel.hpp
continuum_ws/src/continuum_rviz_plugin/src/: continuum_panel.cpp
